--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
                 </div>
             </div>
             <hr>
-            <button id="calculatebtn">
+            <button id="calculateBtn">
                 <img src="https://i.pinimg.com/474x/87/3f/8b/873f8bfc6d628a4fccfb06354212e00b.jpg" alt="">
             </button>
 
             <div class="result">
                 <h1><span id="yearOut">--</span> years</h1>
-        <h1><span id="monthOut">--</span> months</h1>
-        <h1><span id="dayOut">--</span> days</h1>
-        <h1><span id="hourOut">--</span> hours</h1>
-        <h1><span id="minuteOut">--</span> minutes</h1>
+                <h1><span id="monthOut">--</span> months</h1>
+                <h1><span id="dayOut">--</span> days</h1>
+                <h1><span id="hourOut">--</span> hours</h1>
+                <h1><span id="minuteOut">--</span> minutes</h1>
             </div>
         </div>
     </main>
     <footer class="attribute" role="contentinfo">
         Created by Pravesh Trivedi
     </footer>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
